--- a/skrapr_io_dockworker/package.json
+++ b/skrapr_io_dockworker/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1.40",
-    "download": "^4.1.4",
+    "got": "^4.0.0",
+    "moment": "^2.10.5",
     "sqs-consumer": "^2.2.0"
   }
 }
