--- a/skrapr_io_dockworker/package.json
+++ b/skrapr_io_dockworker/package.json
@@ -13,6 +13,7 @@
     "is-url": "^1.2.1",
     "moment": "^2.10.5",
     "q": "^1.4.1",
+    "read-all-stream": "^3.0.1",
     "sqs-consumer": "^2.2.0"
   }
 }
